supergood-review-site

--- a/supergood_review_site/templates/supergood_review_site/base.html
+++ b/supergood_review_site/templates/supergood_review_site/base.html
@@ -4,7 +4,7 @@
 <html lang="en" class="h-full">
 
     <head>
-        <title>{% block title %}django_flex_reviews{% endblock title %}</title>
+        <title>{% block title %}supergood_review_site{% endblock title %}</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⭐</text></svg>">
@@ -14,7 +14,7 @@
 
     <body class="h-full">
         <div class="py-10 mx-auto max-w-7xl sm:px-6 lg:px-8">
-            {% include "django_flex_reviews/_messages.html" %}
+            {% include "supergood_review_site/_messages.html" %}
             <header>
                 <div>
                     <h1 class="text-3xl font-bold leading-tight tracking-tight text-gray-900">
