--- a/supergood_review_site/templates/supergood_review_site/base.html
+++ b/supergood_review_site/templates/supergood_review_site/base.html
@@ -26,7 +26,7 @@
                     </div>
                 </header>
                 <main>
-                    <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+                    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
                         {% block content %}
                         {% endblock content %}
                     </div>
