connect django urls to nav bar links

--- a/supergood_review_site/templates/supergood_review_site/_nav_bar.html
+++ b/supergood_review_site/templates/supergood_review_site/_nav_bar.html
@@ -1,6 +1,8 @@
 {% load django_vite %}
 {% vite_asset 'js/apps/navBar.ts' %}
 
+{{ nav_bar_links|json_script:"nav_bar_links" }}
+
 <div id="nav-bar-vue-app">
     <nav-bar></nav-bar>
 </div>
