--- a/supergood_review_site/templates/supergood_review_site/my_media.html
+++ b/supergood_review_site/templates/supergood_review_site/my_media.html
@@ -14,7 +14,7 @@
                 <thead>
                     <tr>
                         <th scope="col" class="py-3.5 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-0">Title</th>
-                        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">Author</th>
+                        <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">Creator</th>
                         <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 sm:table-cell">Year</th>
                         <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 sm:table-cell">Type</th>
                         <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-0">
