integrate update and delete views with frontend

--- a/supergood_review_site/templates/supergood_review_site/my_media.html
+++ b/supergood_review_site/templates/supergood_review_site/my_media.html
@@ -7,6 +7,7 @@
 {% endblock header %}
 
 {% block content %}
+    {% vite_asset 'css/main.css.js' %}
     {% vite_asset 'js/apps/myMedia.ts' %}
     <div class="px-4 sm:px-0" id="my-media-app">
         <div class="-mx-4 mt-8 sm:-mx-0">
