--- a/supergood_review_site/templates/supergood_review_site/_my_media_row.html
+++ b/supergood_review_site/templates/supergood_review_site/_my_media_row.html
@@ -1,49 +1,48 @@
 {% load widget_tweaks %}
 {% load tags %}
 
-{% comment %}
-    You can't have the vue component <my-media-row/> be the direct child of a <table/>
-    element. This won't work with the browser's HTML parsing.
-
-    To work around that, we can use a <tr/> element with the "is" attribute to replace
-    the <tr/> with our <my-media-row/> component after the django template's HTML has
-    been parsed by the browser.
-
-    See: https://vuejs.org/guide/essentials/component-basics.html#element-placement-restrictions
-{% endcomment %}
-
 {% if item|is_book %}
+    {% comment %}
+        You can't have the vue component <my-media-row/> be the direct child of a <table/>
+        element. This won't work with the browser's HTML parsing.
+
+        To work around that, we can use a <tr/> element with the "is" attribute to replace
+        the <tr/> with our <my-media-row/> component after the django template's HTML has
+        been parsed by the browser.
+
+        See: https://vuejs.org/guide/essentials/component-basics.html#element-placement-restrictions
+    {% endcomment %}
     <tr is="vue:my-media-row"
         initial-title="{{item.title}}"
         initial-creator="{{item.author}}"
         initial-year="{{item.publication_year}}"
+        title-field-name="title"
+        creator-field-name="author"
+        year-field-name="publication_year"
         media-type="Book"
+        csrf-token={{csrf_token}}
+        update-url={% url 'my_media_book_update' item.id %}
     >
-        <template #title-field>
-            {% include "supergood_review_site/forms/_field_wrapper_my_media.html" with field=form.title %}
-        </template>
-        <template #creator-field>
-            {% include "supergood_review_site/forms/_field_wrapper_my_media.html" with field=form.author %}
-        </template>
-        <template #year-field>
-            {% include "supergood_review_site/forms/_field_wrapper_my_media.html" with field=form.publication_year %}
-        </template>
+        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.title v_slot_name="title-field" %}
+        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.author v_slot_name="creator-field" %}
+        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.publication_year v_slot_name="year-field" %}
+        {% include "supergood_review_site/forms/_my_media_delete_form.html" with item=item %}
     </tr>
 {% elif item|is_film %}
     <tr is="vue:my-media-row"
         initial-title="{{item.title}}"
         initial-creator="{{item.director}}"
         initial-year="{{item.release_year}}"
+        title-field-name="title"
+        creator-field-name="director"
+        year-field-name="release_year"
         media-type="Film"
+        csrf-token={{csrf_token}}
+        update-url={% url 'my_media_film_update' item.id %}
     >
-        <template #title-field>
-            {% include "supergood_review_site/forms/_field_wrapper_my_media.html" with field=form.title %}
-        </template>
-        <template #creator-field>
-            {% include "supergood_review_site/forms/_field_wrapper_my_media.html" with field=form.director %}
-        </template>
-        <template #year-field>
-            {% include "supergood_review_site/forms/_field_wrapper_my_media.html" with field=form.release_year %}
-        </template>
+        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.title v_slot_name="title-field" %}
+        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.director v_slot_name="creator-field" %}
+        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.release_year v_slot_name="year-field" %}
+        {% include "supergood_review_site/forms/_my_media_delete_form.html" with item=item %}
     </tr>
 {% endif %}
