add pagination to MyMedia page

--- a/supergood_review_site/templates/supergood_review_site/my_media.html
+++ b/supergood_review_site/templates/supergood_review_site/my_media.html
@@ -29,6 +29,7 @@
                     {% endfor %}
                 </tbody>
             </table>
+            {% include "supergood_review_site/_pagination.html" %}
         </div>
     </div>
 {% endblock content %}
