--- a/supergood_review_site/templates/supergood_review_site/base.html
+++ b/supergood_review_site/templates/supergood_review_site/base.html
@@ -5,7 +5,7 @@
 <html lang="en" class="h-full">
 
     <head>
-        <title>{% block title %}supergood_review_site{% endblock title %}</title>
+        <title>{% block title %}Supergood (Review) Site{% endblock title %}</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⭐</text></svg>">
