--- a/supergood_review_site/templates/supergood_review_site/base.html
+++ b/supergood_review_site/templates/supergood_review_site/base.html
@@ -11,6 +11,7 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔆</text></svg>">
         {% vite_hmr_client %}
         {% vite_asset 'css/tailwind.css.js' %}
+        {% vite_asset 'css/main.css.js' %}
     </head>
 
     <body class="h-full">
