create ReviewFormGroup to process Reviews

--- a/supergood_review_site/templates/supergood_review_site/forms/_media_delete_form.html
+++ b/supergood_review_site/templates/supergood_review_site/forms/_media_delete_form.html
@@ -1,5 +1,5 @@
 <template #delete-form>
-    <form method="post" action={% url 'my_media_book_delete' item.id %}>
+    <form method="post" action={% url 'delete_book' item.id %}>
         {% csrf_token %}
         <button
             type="submit"
