--- a/supergood_review_site/templates/supergood_review_site/_media_row.html
+++ b/supergood_review_site/templates/supergood_review_site/_media_row.html
@@ -21,12 +21,12 @@
         year-field-name="publication_year"
         media-type="Book"
         csrf-token={{csrf_token}}
-        update-url={% url 'my_media_book_update' item.id %}
+        update-url={% url 'update_book' item.id %}
     >
-        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.title v_slot_name="title-field" %}
-        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.author v_slot_name="creator-field" %}
-        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.publication_year v_slot_name="year-field" %}
-        {% include "supergood_review_site/forms/_my_media_delete_form.html" with item=item %}
+        {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.title v_slot_name="title-field" %}
+        {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.author v_slot_name="creator-field" %}
+        {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.publication_year v_slot_name="year-field" %}
+        {% include "supergood_review_site/forms/_media_delete_form.html" with item=item %}
     </tr>
 {% elif item|is_film %}
     <tr is="vue:my-media-row"
@@ -38,11 +38,11 @@
         year-field-name="release_year"
         media-type="Film"
         csrf-token={{csrf_token}}
-        update-url={% url 'my_media_film_update' item.id %}
+        update-url={% url 'update_film' item.id %}
     >
-        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.title v_slot_name="title-field" %}
-        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.director v_slot_name="creator-field" %}
-        {% include "supergood_review_site/forms/_my_media_field_wrapper.html" with field=form.release_year v_slot_name="year-field" %}
-        {% include "supergood_review_site/forms/_my_media_delete_form.html" with item=item %}
+        {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.title v_slot_name="title-field" %}
+        {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.director v_slot_name="creator-field" %}
+        {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.release_year v_slot_name="year-field" %}
+        {% include "supergood_review_site/forms/_media_delete_form.html" with item=item %}
     </tr>
 {% endif %}
