--- a/supergood_review_site/templates/supergood_review_site/create_review.html
+++ b/supergood_review_site/templates/supergood_review_site/create_review.html
@@ -13,8 +13,8 @@
     {% vite_asset 'js/apps/createReview.ts' %}
 
     {% comment %} Convert initial field values into json for use in vue conponents. {% endcomment %}
-    {{review_form|get_initial_field_value:"strategy_content_type"|json_script:"initialSelectedStrategyId"}}
-    {{review_form|get_initial_field_value:"media_type_content_type"|json_script:"initialSelectedMediaTypeContentType"}}
+    {{review_form|get_initial_field_value:"strategy_content_type"|to_str|json_script:"initialSelectedStrategyId"}}
+    {{review_form|get_initial_field_value:"media_type_content_type"|to_str|json_script:"initialSelectedMediaTypeContentType"}}
     {{review_form|get_initial_field_value:"media_type_object_id"|json_script:"initialSelectedMediaTypeObjectId"}}
     {{review_mgmt_form|get_initial_field_value:"create_new_media_type_object"|json_script:"initialCreateNewMediaTypeObject"}}
 
