--- a/supergood_review_site/templates/supergood_review_site/forms/_delete_form.html
+++ b/supergood_review_site/templates/supergood_review_site/forms/_delete_form.html
@@ -1,5 +1,5 @@
 <template #delete-form>
-    <form method="post" action={% url 'delete_book' item.id %}>
+    <form method="post" action={{url}}>
         {% csrf_token %}
         <button
             type="submit"
