--- a/supergood_review_site/templates/supergood_review_site/_media_row.html
+++ b/supergood_review_site/templates/supergood_review_site/_media_row.html
@@ -26,7 +26,8 @@
         {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.title v_slot_name="title-field" %}
         {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.author v_slot_name="creator-field" %}
         {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.publication_year v_slot_name="year-field" %}
-        {% include "supergood_review_site/forms/_media_delete_form.html" with item=item %}
+        {% url 'delete_review' object.id as delete_url %}
+        {% include "supergood_review_site/forms/_delete_form.html" with url=delete_url %}
     </tr>
 {% elif item|is_film %}
     <tr is="vue:my-media-row"
@@ -43,6 +44,7 @@
         {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.title v_slot_name="title-field" %}
         {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.director v_slot_name="creator-field" %}
         {% include "supergood_review_site/forms/_media_field_wrapper.html" with field=form.release_year v_slot_name="year-field" %}
-        {% include "supergood_review_site/forms/_media_delete_form.html" with item=item %}
+        {% url 'delete_review' object.id as delete_url %}
+        {% include "supergood_review_site/forms/_delete_form.html" with url=delete_url %}
     </tr>
 {% endif %}
