--- a/supergood_review_site/templates/supergood_review_site/_reviews_row.html
+++ b/supergood_review_site/templates/supergood_review_site/_reviews_row.html
@@ -4,7 +4,7 @@
     >
         <!-- Title -->
         <div>
-            <p class="flex flex-row items-center">{{ icon }}{{ title }}</p>
+            <p class="flex flex-row items-center"><span class="pr-1">{{ icon }}</span>{{ title }}</p>
             <p class="text-gray-700">{{ subheading }}</p>
         </div>
         <!-- On smaller screens, collapse data into first column -->
