rename to supergood_reads

--- a/supergood_reads/templates/supergood_reads/create_review.html
+++ b/supergood_reads/templates/supergood_reads/create_review.html
@@ -1,4 +1,4 @@
-{% extends "supergood_review_site/base.html" %}
+{% extends "supergood_reads/base.html" %}
 
 {% load django_vite %}
 {% load widget_tweaks %}
