--- a/supergood_reads/templates/supergood_reads/reviews.html
+++ b/supergood_reads/templates/supergood_reads/reviews.html
@@ -1,4 +1,4 @@
-{% extends "supergood_review_site/base.html" %}
+{% extends "supergood_reads/base.html" %}
 {% load partials %}
 {% load django_vite %}
 {% load review_row %}
@@ -29,7 +29,7 @@
                     {% endfor %}
                 </tbody>
             </table>
-            {% include "supergood_review_site/_pagination.html" %}
+            {% include "supergood_reads/_pagination.html" %}
         </div>
     </div>
 {% endblock content %}
